fix: minor layout issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .general {
   max-width: 1344px;
   margin: 0 auto;
@@ -68,6 +73,7 @@
 .hero-page {
   display: flex;
   align-items: flex-start;
+  padding-top: 100px;
 }
 
 .hero-text {
@@ -91,7 +97,7 @@
 
 .hero-text p {
   font-size: 1.25rem;
-  margin-top: -0.3rem;
+  margin-top: 11px;
   margin-bottom: 3.5rem;
   font-family: 'Figtree', sans-serif;
 }
@@ -176,7 +182,6 @@
 }
 
 .hero-image img {
-  margin-top: 1rem;
   width: 1900px;
   max-width: 100%;
 }
@@ -184,7 +189,7 @@
 /* Benefit Section */
 .benefits {
   text-align: center;
-  padding: 4rem 0;
+  padding: 2rem 0;
   background-color: #f7f3ed;
   display: flex;
   align-items: center;
@@ -209,12 +214,13 @@
   color: #222;
   max-width: 547px;
   margin: 0 auto 4rem;
+  margin-top: 22px;
 }
 
 .features-grid {
   display: grid;
   gap: 4rem;
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
 }
@@ -310,7 +316,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
 }
 
 .cta-text h2 {
@@ -351,14 +356,15 @@
 }
 
 .tooth-icon.left {
-  transform: rotate(-26deg);
-  padding-bottom: 160px;
+  position: absolute;
+  transform: translate(-490px, -85px) rotate(-26deg);
   width: 75px;
   height: auto;
 }
 
 .tooth-icon.right {
-  transform: rotate(30deg);
+  position: absolute;
+  transform: translate(490px, 0px) rotate(30deg);
   padding-top: 260px;
   padding-left: 70px;
   width: 50px;
@@ -398,7 +404,7 @@
   display: flex;
   align-items: center;
   gap: 15px;
-  
+  margin-bottom: 1rem;
 }
 
 .brand-name,
